[workspace]
members = [
    "pact_*"
]
exclude = [
    "pact_mock_server",
    "pact_mock_server_cli"
]
resolver = "2"

[patch.crates-io]
# Waiting on the next release of Onig crate
onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false, rev = "76bc1d29651bd17c7d5ecea9266bd2e0e83cb2e0" }

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
