[package]
name = "pact_consumer"
version = "1.2.3"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>", "Eric Kidd <git@randomhacks.net>"]
edition = "2021"
description = "Pact-Rust module that provides support for writing consumer pact tests"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_consumer"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT AND Apache-2.0"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "tls", "colour"]
datetime = ["pact_models/datetime", "pact_matching/datetime", "pact_mock_server/datetime", "pact-plugin-driver?/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_matching/xml", "pact_mock_server/xml", "pact-plugin-driver?/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins", "pact_mock_server/plugins"]
multipart = ["pact_matching/multipart", "pact_mock_server/multipart"] # suport for MIME multipart bodies
tls = ["pact_mock_server/tls"]
colour = ["dep:yansi"]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
bytes = "1.6.1"
futures = "0.3.30"
itertools = "0.13.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
pact_matching = { version = "~1.2.5", path = "../pact_matching", default-features = false }
pact_mock_server = { version = "~1.2.9", default-features = false }
pact_models = { version = "~1.2.2", default-features = false }
pact-plugin-driver = { version = "~0.7.0", optional = true, default-features = false }
regex = "1.10.5"
serde_json = "1.0.120"
termsize = "0.1.8"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
yansi = { version = "1.0.1", optional = true }

[dev-dependencies]
quickcheck = "1.0.3"
env_logger = "0.11.3"
expectest = "0.12.0"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
tokio-test = "0.4.4"
test-log = { version = "0.2.16", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log", "fmt"] }
pretty_assertions = "1.4.0"
