[package]
name = "pact_models"
version = "1.2.8"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Pact-Rust support library that provides the core models for dealing with Pact files"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_models"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]
build = "build.rs"

[features]
default = ["datetime", "xml", "form_urlencoded"]
datetime = ["dep:chrono", "dep:chrono-tz", "dep:gregorian"] # Support for date/time matchers and expressions
xml = ["dep:sxd-document"] # support for matching XML documents
form_urlencoded = ["dep:serde_urlencoded"] # suport for matching form urlencoded

[dependencies]
ariadne = "0.5.0"
anyhow = "1.0.93"
base64 = "0.22.1"
bytes = { version = "1.8.0", features = ["serde"] }
chrono = { version = "0.4.38", features = ["std", "clock"], default-features = false, optional = true }
chrono-tz = { version = "0.10.0", optional = true }
gregorian = { version = "0.2.4", optional = true }
hashers = "1.0.1"
hex = "0.4.3"
indextree = "4.7.3"
itertools = "0.14.0"
kiss_xml = "1.0.1"
lazy_static = "1.5.0"
lenient_semver = "0.4.2"
logos = "0.15.0"
maplit = "1.0.2"
mime = "0.3.17"
nom = "7.1.3"
rand = "0.8.5"
rand_regex = "0.17.0"
regex = "1.11.1"
regex-syntax = "0.8.5"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_urlencoded = { version = "0.7.1", optional = true }
sxd-document = { version = "0.3.2", optional = true }
tracing = "0.1.41" # This needs to be the same version across all the libs (i.e. Pact FFI and plugin driver)

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fs2 = "0.4.3"
onig = { version = "6.4.0", default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
uuid = { version = "1.3.3", features = ["v4"] }

[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { version = "1.3.3", features = ["v4"] }

[dev-dependencies]
expectest = "0.12.0"
env_logger = "0.11.5"
hamcrest2 = "0.3.0"
pretty_assertions = "1.4.1"
rstest = "0.24.0"
speculate = "0.1.2"
test-log = { version = "0.2.16", features = ["trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "tracing-log", "fmt"] }
trim-margin = "0.1.0"

[build-dependencies]
parse-zoneinfo = "0.3.1"
maplit = "1.0.2"
