[package]
name = "pact_verifier"
version = "1.3.0"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2024"
description = "Pact-Rust support library that implements provider verification functions"
documentation = "https://docs.rs/pact_verifier/"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart"]
datetime = ["pact_models/datetime", "pact-plugin-driver?/datetime", "pact_matching/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact-plugin-driver?/xml", "pact_matching/xml"] # support for matching XML documents
plugins = ["dep:pact-plugin-driver", "pact_matching/plugins"]
multipart = ["pact_matching/multipart"] # suport for MIME multipart bodies

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.82"
async-trait = "0.1.80"
base64 = "0.22.0"
bytes = "1.10.1"
difference = "2.0.0"
futures = "0.3.30"
http = "1.3.1"
humantime = "2.2.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
mime = "0.3.17"
pact_matching = { version = "~2.0.0-beta", path = "../pact_matching", default-features = false }
pact_models = { version = "~1.3.1", default-features = false }
pact-plugin-driver = { version = "~0.7.4", optional = true, default-features = false }
regex = "1.11.1"
reqwest = { version = "0.12.3", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde = "1.0.197"
serde_json = "1.0.115"
serde_with = { version = "3.12.0", features = ["json"] }
thiserror = "2.0.11"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-core = "0.1.33"
url = "2.5.0"
urlencoding = "2.1.3"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
quickcheck = "1.0.3"
expectest = "0.12.0"
env_logger = "0.11.3"
pact_consumer = { version = "~1.3.3", path = "../pact_consumer" }
test-log = { version = "0.2.15", features = ["trace"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log", "fmt"] }
chrono = "0.4.38"
chrono-tz = "0.10.1"
pretty_assertions = "1.4.1"
